# ashtrail

./: .dockerignore  .env.example  .gitignore  README.md  check_log.txt  check_output.txt  firebase.json  metadata.json  package.json  tailwind.config.js
.agents/rules/: frontend-dev.md
apps/dev-tools/: index.html  move_ui.py  package.json  patch_layout.cjs  patch_map.py  pnpm-lock.yaml  refactor_header.py  vite.config.ts
apps/dev-tools/backend/: Cargo.toml  README.md
apps/dev-tools/backend/src/: ai_characters.rs  ai_events.rs  ai_quests.rs  asset_packs.rs  cell_analyzer.rs  cms.rs  demo_output.rs  demo_step_one.rs  demo_step_two.rs  ecology.rs  exploration_jobs.rs  game_rules.rs  gemini.rs  generator.rs  hierarchy.rs  jobs.rs  locations.rs  lyria.rs  main.rs  media_audio.rs  media_video.rs  progression.rs  quest_ai.rs  tts.rs  worldgen_pipeline.rs
apps/dev-tools/backend/src/combat_engine/: ai.rs  combat.rs  content_loader.rs  grid.rs  mod.rs  modifiers.rs  preparation.rs  rules.rs  session.rs  skill_basics.rs  types.rs
apps/dev-tools/backend/src/exploration_engine/: manifest.rs  mod.rs  session.rs  sim.rs  types.rs
apps/dev-tools/documentation/: planet-storage.md
apps/dev-tools/scripts/: migrate_characters.ts
apps/dev-tools/src/: App.tsx  NewWorldGenPage.tsx  WorldGenPage.tsx  geo.worker.ts  index.tsx
apps/server/: Dockerfile  package.json
apps/server/backend/: README.md
apps/server/src/: index.ts
apps/website/: App.tsx  constants.tsx  index.html  package.json  supabase.sql  types.ts  vite.config.ts
apps/website/UI/: GameClock.tsx  (+1 more)
docs/: modifier-migration.md
documentation/: agent-story-loop-architecture.md  architecture.md  ashtrail_expansion_design.md  deploy-website-firebase.md  exploration-location-feature.md  game-vision.md  interleaved.md  map-generation-research.md  sprawl-architecture.md  story-loop-frontend.md  story-loop-operational-plan.md
game-assets/assets/: registry.ts
game-assets/logic/: assetsLogic.ts
(+166 files in other folders)
