[package]
name = "dev-tools-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["clock"] }
geo-core = { path = "../../../packages/geo-core" }
reqwest = { version = "0.13.2", features = ["json"] }
dotenv = "0.15.0"
image = "0.25.9"
base64 = "0.22.1"
rayon = "1.10"
worldgen-core = { path = "../../../packages/worldgen-core" }
